working on minor corrections
