# backend/cmd/profile/docs/swagger.json
@@ -904,7 +904,7 @@
                         "AuthKey": []
                     }
                 ],
-                "description": "Update your display name and bio.",
+                "description": "Update your display name, bio, and seller settings.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1100,7 +1100,9 @@
         "handler.UpdateProfileRequest": {
             "type": "object",
             "required": [
-                "display_name"
+                "display_name",
+                "is_template_seller",
+                "skill_level"
             ],
             "properties": {
                 "bio": {
@@ -1110,6 +1112,13 @@
                 "display_name": {
                     "type": "string",
                     "minLength": 2
+                },
+                "is_template_seller": {
+                    "type": "boolean"
+                },
+                "skill_level": {
+                    "type": "integer",
+                    "minimum": 2
                 }
             }
         },
